complete UI info of admin

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 }
 
 .btnProfile {
-  background-color: #064861;
+  background-color: #1490bf;
   font-size: 16px;
   font-weight: 600;
   color: #f7f9f9;
