--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,17 @@
   width: 100%;
 }
 
+.inputAccount {
+  height: 2rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  border-radius: 0.375rem;
+  border: solid 1.5px #a8a8a8;
+  font-size: 13px;
+  width: 100%;
+  border-color: #064861;
+}
+
 .btnProfile {
   background-color: #1490bf;
   font-size: 16px;
